GTK+ L&F JTextComponent not respecting desktop caret blink rate

XMLWordPrintable

    • b68
    • other
    • other

        Set the cursor blink rate to something fast, or turn it off completely, on the GNOME Desktop. Specifically do this with the Java Desktop System Release 3 via: Launch->Preferences->Desktop Preferencs->Keyboard->Behavior and then in the Keyboard Tabbed section uncheck "Cursor blinks in text boxes and fields" or simply move the slider to the far right edge. You may need to log out and back in (you don't on JDS 3 Linux, but I haven't tested on Solaris).

        Now launch SwingSet2, choose the GTK+ L&F, and click in an editable text field. Note that the caret blink rate here isn't respecting the desktop setting.
        ###@###.### 2005-04-22 23:14:41 GMT

              Assignee:
              Semyon Sadetsky (Inactive)
              Reporter:
              Peter Korn (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: