6260348: GTK+ L&F JTextComponent not respecting desktop caret blink rate Reviewed-by: alexsch, azvegint